--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,30 @@
     width: auto;
 }
 
+.watch-navbar {
+    background-color: transparent;
+    margin-bottom: -70px;
+    padding-bottom: 0;
+    opacity: 0.9;
+    z-index: 1000;
+}
+
+.watch-navbar .btn {
+    /* blur background */
+    box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.3);
+    
+	backdrop-filter:blur(10px) !important;
+}
+
+.watch-navbar .form-control {
+    /* blur background */
+	backdrop-filter:blur(10px);
+
+    background-color: rgba(0, 0, 0, 0);
+    box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.3);
+
+}
+
 .movie-slide {
     position: relative;
     width: 100%;
