update style.css, index.html and watch.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,12 @@
     /* --swiper-theme-color: #2a9fd6; */
 }
 
+.stopScrolling {
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+}
+
 /* .btn-primary {
     background-color: var(--bs-primary);
     border-color: var(--bs-primary);
@@ -239,6 +245,26 @@
     object-fit: cover;
 }
 
+.trending-hover-title {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 20%, rgba(0, 0, 0, 0.6) 100%);
+    display: block;
+    padding: 10px;
+    /* margin-top: 10px; */
+    padding-top: 10px;
+    /* height: calc(100% + 5px); */
+    /* margin-bottom: 20px; */
+    padding-bottom: 30px;            
+    color: white;
+    font-size: 1.5rem;
+    z-index: 3;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
 .trending-shadow {
     position: relative;
     left: 0;
@@ -276,6 +302,10 @@
     border-bottom-right-radius: 10px;
     background: #1a1a1a;
     z-index: 2;
+}
+
+.trending-content .placeholder {
+    border-radius: 0.5rem;
 }
 
 .trending-slide-title {
