--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,22 +246,24 @@
 }
 
 .trending-hover-title {
+    display: block;
     position: absolute;
     left: 0;
     right: 0;
     top: 0;
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 20%, rgba(0, 0, 0, 0.6) 100%);
-    display: block;
     padding: 10px;
-    /* margin-top: 10px; */
     padding-top: 10px;
-    /* height: calc(100% + 5px); */
-    /* margin-bottom: 20px; */
-    padding-bottom: 30px;            
-    color: white;
+    padding-bottom: 30px;
+    /* min-height: 220px; */
+    height: 100%;
+
     font-size: 1.5rem;
-    z-index: 3;
+    color: white;
+    /* background: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.6) 20%, rgba(0, 0, 0, 0.6) 100%); */
+    background-color: rgba(0, 0, 0, 0.6);
+
     opacity: 0;
+    z-index: 1;
     transition: opacity 0.3s ease;
 }
 
@@ -274,7 +276,7 @@
     background: linear-gradient(to top, rgb(26, 26, 26, 1), rgba(0, 0, 0, 0));
 
 
-    z-index: 1;
+    z-index: 2;
 }
 
 .trending-shadow2 {
@@ -285,7 +287,7 @@
     height: 30px; 
     background: linear-gradient(to top, rgb(26, 26, 26, 1), rgba(0, 0, 0, 0));
 
-    z-index: 1;
+    z-index: 3;
 }
 
 .trending-content {
