--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
-.hidden {
+.hidden
+{
     display: none !important;
 }
 
-:root {
+:root
+{
     --bs-primary: #f34d58 !important;
     /* --bs-primary-hover: #e72737 !important;
 
@@ -14,7 +16,8 @@
     /* --swiper-theme-color: #2a9fd6; */
 }
 
-.stopScrolling {
+.stopScrolling
+{
     height: 100%;
     overflow: hidden;
     pointer-events: none;
@@ -55,12 +58,14 @@
     border: 1px solid var(--bs-primary);
 } */
 
-.navbar-brand img {
+.navbar-brand img
+{
     height: 50px;
     width: auto;
 }
 
-.watch-navbar {
+.watch-navbar
+{
     background-color: transparent;
     margin-bottom: -70px;
     padding-bottom: 0;
@@ -68,23 +73,26 @@
     z-index: 1000;
 }
 
-.watch-navbar .btn {
+.watch-navbar .btn
+{
     /* blur background */
     box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.3);
-    
-	backdrop-filter:blur(10px) !important;
+
+    backdrop-filter: blur(10px) !important;
 }
 
-.watch-navbar .form-control {
+.watch-navbar .form-control
+{
     /* blur background */
-	backdrop-filter:blur(10px);
+    backdrop-filter: blur(10px);
 
     background-color: rgba(0, 0, 0, 0);
     box-shadow: inset 0 0 0 20px rgba(0, 0, 0, 0.3);
 
 }
 
-.movie-slide {
+.movie-slide
+{
     position: relative;
     width: 100%;
     height: 300px;
@@ -92,7 +100,8 @@
     /* border-radius: 10px; */
 }
 
-.movie-slide-bg {
+.movie-slide-bg
+{
     position: absolute;
     top: 0;
     left: 0;
@@ -106,7 +115,8 @@
     z-index: 1;
 }
 
-.movie-slide-gradient {
+.movie-slide-gradient
+{
     position: absolute;
     top: 0;
     left: 0;
@@ -120,7 +130,8 @@
 }
 
 
-.movie-slide-content {
+.movie-slide-content
+{
     position: absolute;
     bottom: 0;
     left: 0;
@@ -135,7 +146,8 @@
 
 
 
-.movie-slide-poster {
+.movie-slide-poster
+{
     width: 140px;
     height: 210px;
     border-radius: 10px;
@@ -143,33 +155,39 @@
     margin-right: 20px;
 }
 
-.movie-slide-details {
+.movie-slide-details
+{
     flex: 1;
 }
 
-.movie-slide-title {
+.movie-slide-title
+{
     font-size: 24px;
     font-weight: 600;
     margin-bottom: 10px;
 }
 
-.movie-slide-description {
+.movie-slide-description
+{
     font-size: 16px;
     margin-bottom: 10px;
     max-height: 100px;
 }
 
-.movie-slide-rating {
+.movie-slide-rating
+{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
 }
 
-.rating-value {
+.rating-value
+{
     margin-left: 5px;
 }
 
-.movie-slide-actions {
+.movie-slide-actions
+{
     display: flex;
     gap: 10px;
 }
@@ -177,53 +195,65 @@
 
 
 
-@media (min-width: 768px) {
+@media (min-width: 768px)
+{
 
-    .movie-slide {
+    .movie-slide
+    {
         height: 400px;
     }
 
-    .movie-slide-poster {
+    .movie-slide-poster
+    {
         height: 250px;
         width: auto;
     }
 
-    .movie-slide-content {
+    .movie-slide-content
+    {
         margin: auto;
         width: 70%;
         max-width: 800px;
     }
 
-    .movie-slide-title {
+    .movie-slide-title
+    {
         font-size: 28px;
     }
 
-    .movie-slide-description {
+    .movie-slide-description
+    {
         font-size: 18px;
         width: 100%;
     }
 
-    .movie-slide-rating {
+    .movie-slide-rating
+    {
         font-size: 16px;
     }
 
-    .rating-value {
+    .rating-value
+    {
         margin-left: 10px;
-    }    
+    }
 }
 
-@media (min-width: 992px) {
-    .movie-slide {
+@media (min-width: 992px)
+{
+    .movie-slide
+    {
         height: 500px;
     }
 
-    .movie-slide-poster {
+    .movie-slide-poster
+    {
         height: 350px;
         width: auto;
     }
-} 
+}
 
-.trending-slide {
+.trending-slide
+{
     position: relative;
     width: 160px;
     height: 290px;
@@ -232,7 +262,8 @@
     transition: all 0.3s;
 }
 
-.trending-slide:hover {
+.trending-slide:hover
+{
     /* make image darker on hover */
     filter: brightness(0.9);
     /* zoom in image on hover */
@@ -243,13 +274,15 @@
 
 
 
-.trending-slide img {
+.trending-slide img
+{
     height: 80%;
     width: 100%;
     object-fit: cover;
 }
 
-.trending-hover-title {
+.trending-hover-title
+{
     display: block;
     position: absolute;
     left: 0;
@@ -271,30 +304,33 @@
     transition: opacity 0.3s ease;
 }
 
-.trending-shadow {
+.trending-shadow
+{
     position: relative;
     left: 0;
     right: 0;
     bottom: 60px;
-    height: 40px; 
+    height: 40px;
     background: linear-gradient(to top, rgb(26, 26, 26, 1), rgba(0, 0, 0, 0));
 
 
     z-index: 2;
 }
 
-.trending-shadow2 {
+.trending-shadow2
+{
     position: relative;
     left: 0;
     right: 0;
     bottom: 90px;
-    height: 30px; 
+    height: 30px;
     background: linear-gradient(to top, rgb(26, 26, 26, 1), rgba(0, 0, 0, 0));
 
     z-index: 3;
 }
 
-.trending-content {
+.trending-content
+{
     position: absolute;
     bottom: 0;
     left: 0;
@@ -318,19 +354,22 @@
     border-radius: 0.5rem;
 } */
 
-.placeholder {
+.placeholder
+{
     border-radius: 0.5em;
     user-select: none;
 }
 
-img {
+img
+{
     user-select: none;
     /* disable image dragging */
     pointer-events: none;
-    
+
 }
 
-.trending-slide-title {
+.trending-slide-title
+{
     font-size: 22px;
     font-weight: 600;
     margin-bottom: 10px;
@@ -339,119 +378,142 @@ img {
 
 
 
-.trending-slide-rating {
+.trending-slide-rating
+{
     display: flex;
     align-items: center;
     margin-bottom: 10px;
     font-size: 13px;
 }
 
-.trending-slide-actions {
+.trending-slide-actions
+{
     display: flex;
     justify-content: space-between;
     gap: 10px;
 }
 
-.trending-slide-actions button {
+.trending-slide-actions button
+{
     font-size: 14px;
     height: 30px;
     padding: 0;
 }
 
-.trending-slide-actions button:first-child {
+.trending-slide-actions button:first-child
+{
     width: 60%;
 }
 
-.trending-slide-actions button:last-child {
+.trending-slide-actions button:last-child
+{
     width: 30%;
 }
 
-.trending-slide-actions a {
+.trending-slide-actions a
+{
     font-size: 14px;
     height: 30px;
     padding: 0;
     padding-top: 4px;
 }
 
-.trending-slide-actions a:first-child {
+.trending-slide-actions a:first-child
+{
     width: 60%;
 }
 
-.trending-slide-actions a:last-child {
+.trending-slide-actions a:last-child
+{
     width: 30%;
 }
 
 
 /* on not mobile screens */
-@media (min-width: 768px) {
-    .trending-slide {
+@media (min-width: 768px)
+{
+    .trending-slide
+    {
         width: 200px;
         height: 350px;
     }
 
-    .trending-slide img {
+    .trending-slide img
+    {
         height: 85%;
     }
 
-    .trending-shadow {
+    .trending-shadow
+    {
         bottom: 85px !important;
         height: 40px;
-                    /* background: linear-gradient(to top, rgb(255, 0, 0), rgba(0, 0, 0, 0)); */
-                }
+        /* background: linear-gradient(to top, rgb(255, 0, 0), rgba(0, 0, 0, 0)); */
+    }
 
-    .trending-shadow2 {
+    .trending-shadow2
+    {
         bottom: 125px;
         height: 40px;
         /* display: none; */
-                    /* background: linear-gradient(to top, rgb(255, 0, 0), rgba(0, 0, 0, 0)); */
+        /* background: linear-gradient(to top, rgb(255, 0, 0), rgba(0, 0, 0, 0)); */
 
     }
 
-    .trending-content {
+    .trending-content
+    {
         padding: 20px;
         padding-top: 10px;
         height: 100px;
     }
 
-    .trending-slide-title {
+    .trending-slide-title
+    {
         font-size: 24px;
     }
 
-    .trending-slide-rating {
+    .trending-slide-rating
+    {
         font-size: 16px;
     }
 
-    .trending-slide-actions button {
+    .trending-slide-actions button
+    {
         font-size: 16px;
         height: 40px;
     }
 
-    .trending-slide-actions button:first-child {
+    .trending-slide-actions button:first-child
+    {
         width: 70%;
     }
 
-    .trending-slide-actions button:last-child {
+    .trending-slide-actions button:last-child
+    {
         width: 30%;
     }
 
-    .trending-slide-actions a {
+    .trending-slide-actions a
+    {
         font-size: 16px;
         height: 40px;
         padding-top: 8px;
     }
 
-    .trending-slide-actions a:first-child {
+    .trending-slide-actions a:first-child
+    {
         width: 70%;
     }
 
-    .trending-slide-actions a:last-child {
+    .trending-slide-actions a:last-child
+    {
         width: 30%;
     }
 }
 
 
- /* actor slide, rounded image, below the name and popularity */
- .actor-slide {
+/* actor slide, rounded image, below the name and popularity */
+.actor-slide
+{
     padding: 20px;
     border-radius: 10px;
     color: #fff;
@@ -462,7 +524,8 @@ img {
     transition: all 0.3s;
 }
 
-.actor-slide:hover {
+.actor-slide:hover
+{
     /* make image darker on hover */
     filter: brightness(0.9);
     /* zoom in image on hover */
@@ -470,7 +533,8 @@ img {
     transition: all 0.3s;
 }
 
-.actor-slide-poster {
+.actor-slide-poster
+{
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -478,51 +542,72 @@ img {
     margin-right: 20px;
 }
 
-.actor-slide-content {
+.actor-slide-content
+{
     flex: 1;
 }
 
-.actor-slide-title {
+.actor-slide-title
+{
     font-size: 24px;
     margin-top: 10px;
 }
 
-.actor-slide-job {
+.actor-slide-job
+{
     font-size: 15px;
 }
 
 
-@media (min-width: 768px) {
-    .actor-slide {
+@media (min-width: 768px)
+{
+    .actor-slide
+    {
         width: 250px;
         max-width: 250px;
     }
 
-    .actor-slide-poster {
+    .actor-slide-poster
+    {
         width: 200px;
         height: 200px;
     }
 
-    .actor-slide-title {
+    .actor-slide-title
+    {
         font-size: 28px;
     }
 
-    .actor-slide-job {
+    .actor-slide-job
+    {
         font-size: 18px;
     }
+
+    .watch-content
+    {
+        margin-top: 30px;
+
+    }
+
+
+
 }
 
 
 
-footer {
+footer
+{
     padding: 40px 0;
     border-top: 1px solid #333;
 }
-footer .social-link ul li{
-  list-style:none;
+
+footer .social-link ul li
+{
+    list-style: none;
 }
 
-footer .social-link ul li a {
+footer .social-link ul li a
+{
     color: #fff;
     font-size: 1.35rem;
     transition: all 0.5s ease-in-out;
@@ -530,18 +615,22 @@ footer .social-link ul li a {
     text-decoration: none;
 }
 
-footer ul.d-flex.list-none {
+footer ul.d-flex.list-none
+{
     padding: 0;
     gap: 20px;
     justify-content: center;
     margin: 0;
 }
-footer .social-link ul li img {
+
+footer .social-link ul li img
+{
     width: 45px;
     filter: invert(1);
 }
 
-footer .social-link ul {
+footer .social-link ul
+{
     padding: 0;
     margin: 0;
     display: flex;
@@ -549,17 +638,347 @@ footer .social-link ul {
     gap: 20px;
 }
 
-footer .copyright p {
+footer .copyright p
+{
     font-size: 1.10rem;
     color: #fff;
     margin: 0;
     line-height: 1.5;
 }
 
-footer .copyright {
+footer .copyright
+{
     text-align: center;
 }
 
-footer .social-link {
+footer .social-link
+{
     margin: 0 0 30px;
+}
+
+
+/* details */
+
+.watch-banner
+{
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    padding: 0 100px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.watch-banner .watch-bg
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.5);
+}
+
+.watch-content
+{
+    position: relative;
+    z-index: 1;
+    max-width: 550px;
+}
+
+.watch-movieTitleImg
+{
+    max-width: 250px;
+    border-radius: 15px;
+    height: 250px;
+    margin-bottom: 10px;
+}
+
+.watch-movieTitle
+{
+    font-size: 2.watch-5em;
+    font-weight: 700;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.watch-banner .watch-content h4
+{
+    color: rgba(255, 255, 255, 0.watch-5);
+    font-weight: 500;
+}
+
+.watch-banner .watch-content h4 span
+{
+    padding: 0 10px;
+    border-right: 1px solid rgba(255, 255, 255, 0.watch-5);
+}
+
+.watch-banner .watch-content h4 span:first-child
+{
+    padding-left: 0;
+}
+
+.watch-banner .watch-content h4 span:last-child
+{
+    border-right: none;
+}
+
+.watch-banner .watch-content h4 span i
+{
+    background: var(--bs-primary);
+    color: #fff;
+    padding: 0 8px;
+    display: inline-block;
+    font-style: normal;
+    border-radius: 4px;
+}
+
+.watch-banner .watch-content p
+{
+    font-size: 1em;
+    font-weight: 300;
+    line-height: 1.watch-5em;
+    color: #fff;
+    margin: 10px 0 20px;
+}
+
+
+
+
+.watch-play
+{
+    /* position: absolute; */
+    /* bottom: 50px; */
+    /* left: 100px; */
+    display: flex;
+    margin-top: 30px;
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-decoration: none;
+    letter-spacing: 1px;
+    font-size: 1.watch-2em;
+    cursor: pointer;
+}
+
+.watch-play img
+{
+    margin-right: 10px;
+    max-width: 50px;
+}
+
+.watch-trailer
+{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 100000;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+}
+
+.watch-trailer.watch-active
+{
+    visibility: visible;
+    opacity: 1;
+}
+
+.watch-trailer iframe
+{
+    /* max-width: 900px; */
+    /* width: 800px; */
+    /* height: 450px; */
+    width: 80vw;
+    height: 45vw;
+    outline: none;
+    background-color: rgba(0, 0, 0, 0.watch-8);
+
+    /* add shadow */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.watch-5);
+}
+
+.watch-trailer .watch-trailer-note
+{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: 0.watch-8em;
+    text-align: center;
+}
+
+.watch-trailer .watch-close
+{
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    cursor: pointer;
+    /* filter: invert(1); */
+    color: #fff;
+    max-width: 32px;
+    font-size: 1.watch-5em;
+}
+
+@media (max-width: 1024px)
+{
+    .watch-navigation li
+    {
+        margin: 0 4px;
+    }
+
+    .watch-banner
+    {
+        padding: 100px 100px;
+    }
+
+    .watch-banner .watch-play
+    {
+        bottom: 40px;
+    }
+}
+
+@media (max-width: 991px)
+{
+    header
+    {
+        padding: 20px 50px;
+        flex-direction: column;
+    }
+
+    .watch-banner
+    {
+        padding: 100px 50px;
+    }
+
+    .watch-banner .watch-play
+    {
+        left: 50px;
+        font-size: 1em;
+    }
+
+    .watch-play img
+    {
+        margin-right: 10px;
+        max-width: 40px;
+    }
+
+    .watch-trailer video
+    {
+        max-width: 90%;
+    }
+}
+
+@media (max-width: 768px)
+{
+    .watch-banner
+    {
+        padding: 170px 50px;
+    }
+
+    .watch-banner .watch-play
+    {
+        bottom: 110px;
+    }
+
+    .watch-banner
+    {
+        height: 100vh;
+    }
+}
+
+@media (max-width: 600px)
+{
+
+    .watch-banner
+    {
+        padding: 220px 20px 120px;
+    }
+
+    .watch-banner .watch-play
+    {
+        left: 20px;
+        bottom: 30px;
+    }
+
+    .watch-trailer .watch-close
+    {
+        max-width: 20px;
+    }
+}
+
+#details-movie .watch-fw-bold
+{
+    margin-bottom: 0;
+}
+
+.watch-provider
+{
+    /* margin-right: 10px; */
+    width: 50px;
+    height: 50px;
+}
+
+.watch-provider a
+{
+    /* overflow: hidden; */
+    border-radius: 10px;
+    display: block;
+    width: 50px;
+    height: 50px;
+}
+
+.watch-provider img
+{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.watch-provider .watch-placeholder
+{
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.watch-provider-wrapper
+{
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+}
+
+/* search */
+.search-results-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 100%;
+}
+.search-results {
+    display: flex;
+    flex-wrap: wrap;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+    justify-content: center;
+}
+
+.search-results .trending-slide {
+    margin: 10px;
+    width: 200px;
+    height: 300px;
+    position: relative;
+    
 }
